--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 01:05:02 2018</p>
+         Last Run: Wed Dec  5 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,34 +33,34 @@
                         <td>Clear</td>
                         <td>-14</td>
                         <td>-19</td>
-                        <td>7</td>
-                        <td>86</td>
+                        <td>6</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-15</td>
                         <td>-20</td>
-                        <td>7</td>
+                        <td>6</td>
                         <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>8</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-15</td>
-                        <td>-20</td>
-                        <td>7</td>
-                        <td>86</td>
+                        <td>-16</td>
+                        <td>-21</td>
+                        <td>6</td>
+                        <td>88</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>SSW</td>
                         <td>8</td>
                      </tr>
@@ -91,7 +91,7 @@
                "data":[
                  "-19",
                  "-20",
-                 "-20"
+                 "-21"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "-14",
                  "-15",
-                 "-15"
+                 "-16"
                ]
              }
            ]
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "7",
-                 "7"
+                 "6",
+                 "6",
+                 "6"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "86",
                  "85",
-                 "86"
+                 "85",
+                 "88"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "6",
                  "7",
-                 "8",
                  "8"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 01:05:02 2018</p>
+         Last Run: Wed Dec  5 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -248,12 +248,12 @@
                         <td>Partly Cloudy</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>0</td>
-                        <td>55</td>
+                        <td>1</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>55</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -261,11 +261,11 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>0</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>55</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>0</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>52</td>
+                        <td>51</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,7 +375,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
+                 "1",
                  "0",
                  "0"
                ]
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
-                 "53",
-                 "51"
+                 "57",
+                 "54",
+                 "52"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "55",
-                 "55",
-                 "52"
+                 "54",
+                 "54",
+                 "51"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 01:05:02 2018</p>
+         Last Run: Wed Dec  5 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -463,12 +463,12 @@
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>69</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>41</td>
+                        <td>WSW</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -476,23 +476,23 @@
                         <td>-1</td>
                         <td>-5</td>
                         <td>2</td>
-                        <td>64</td>
-                        <td>1</td>
+                        <td>62</td>
+                        <td>0</td>
                         <td>11</td>
-                        <td>SW</td>
-                        <td>44</td>
+                        <td>WSW</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>2</td>
-                        <td>59</td>
+                        <td>1</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>SW</td>
-                        <td>45</td>
+                        <td>WSW</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
                  "2",
-                 "2"
+                 "2",
+                 "1"
                ]
              },
              {
@@ -602,8 +602,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "69",
-                 "64",
-                 "59"
+                 "62",
+                 "57"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "41",
                  "44",
-                 "45"
+                 "50",
+                 "54"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 01:05:02 2018</p>
+         Last Run: Wed Dec  5 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -675,39 +675,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>4</td>
-                        <td>74</td>
+                        <td>5</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>58</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>74</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>58</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-3</td>
+                        <td>-7</td>
                         <td>5</td>
-                        <td>76</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>57</td>
+                        <td>79</td>
                      </tr>
                   </tbody>
                </table>
@@ -736,7 +736,7 @@
                "data":[
                  "-6",
                  "-6",
-                 "-6"
+                 "-7"
                ]
              },
              {
@@ -748,7 +748,7 @@
                "data":[
                  "-2",
                  "-2",
-                 "-2"
+                 "-3"
                ]
              }
            ]
@@ -805,7 +805,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
+                 "5",
                  "5",
                  "5"
                ]
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "74",
-                 "74",
-                 "76"
+                 "75",
+                 "75",
+                 "77"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
-                 "58",
-                 "57"
+                 "75",
+                 "79",
+                 "79"
                ]
              }
            ]
