--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 02:05:02 2018</p>
+         Last Run: Wed Dec  5 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Clear</td>
                         <td>-14</td>
                         <td>-19</td>
-                        <td>6</td>
-                        <td>85</td>
+                        <td>7</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>6</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-15</td>
                         <td>-20</td>
-                        <td>6</td>
+                        <td>7</td>
                         <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>7</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-16</td>
                         <td>-21</td>
-                        <td>6</td>
+                        <td>7</td>
                         <td>88</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SSW</td>
-                        <td>8</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
-                 "6",
-                 "6"
+                 "7",
+                 "7",
+                 "7"
                ]
              },
              {
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "85",
+                 "86",
                  "85",
                  "88"
                ]
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "6",
                  "7",
-                 "8"
+                 "8",
+                 "9"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 02:05:02 2018</p>
+         Last Run: Wed Dec  5 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-6</td>
                         <td>-10</td>
                         <td>1</td>
-                        <td>57</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -261,7 +261,7 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>0</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -273,11 +273,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>0</td>
-                        <td>52</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>51</td>
+                        <td>52</td>
                      </tr>
                   </tbody>
                </table>
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "54",
-                 "52"
+                 "58",
+                 "55",
+                 "53"
                ]
              },
              {
@@ -399,7 +399,7 @@
                "data":[
                  "54",
                  "54",
-                 "51"
+                 "52"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 02:05:02 2018</p>
+         Last Run: Wed Dec  5 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -488,7 +488,7 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>57</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
@@ -603,7 +603,7 @@
                "data":[
                  "69",
                  "62",
-                 "57"
+                 "58"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Dec  5 02:05:02 2018</p>
+         Last Run: Wed Dec  5 03:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,15 +679,15 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>75</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>75</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-2</td>
                         <td>-6</td>
                         <td>5</td>
@@ -695,19 +695,19 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>79</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>5</td>
-                        <td>77</td>
+                        <td>6</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>79</td>
+                        <td>81</td>
                      </tr>
                   </tbody>
                </table>
@@ -807,7 +807,7 @@
                "data":[
                  "5",
                  "5",
-                 "5"
+                 "6"
                ]
              },
              {
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "76",
                  "75",
-                 "75",
-                 "77"
+                 "78"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
-                 "79",
-                 "79"
+                 "77",
+                 "81",
+                 "81"
                ]
              }
            ]
